#23396 Issue Fix: Misaligned reply preview in thread composer

--- a/res/css/views/rooms/_ReplyPreview.pcss
+++ b/res/css/views/rooms/_ReplyPreview.pcss
@@ -20,6 +20,7 @@ limitations under the License.
     background: $background;
     max-height: 50vh;
     overflow: auto;
+    margin-left: calc(-1 * $spacing-8);
 
     .mx_ReplyPreview_section {
         border-bottom: 1px solid $primary-hairline-color;
